--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Khula|Telex|Yantramanav');
+@import url("https://fonts.googleapis.com/css?family=Khula|Telex|Yantramanav");
 
 body {
   padding: 0;
@@ -22,7 +22,7 @@ $smallSpacing: 0.5em;
 */
 %headerPrimary {
   font-weight: 600;
-  font-family: 'Yantramanav', sans-serif;
+  font-family: "Yantramanav", sans-serif;
   font-size: $headerPrimarySize;
   color: $textPrimaryColor;
   text-transform: capitalize;
@@ -30,7 +30,7 @@ $smallSpacing: 0.5em;
 
 %bodyPrimary {
   font-weight: 500;
-  font-family: 'Khula', sans-serif;
+  font-family: "Khula", sans-serif;
   font-size: 0.95em;
   color: $textSecondaryColor;
 }
@@ -42,6 +42,8 @@ $smallSpacing: 0.5em;
   text-transform: uppercase;
   color: $headerPrimaryColor;
   margin-bottom: -5px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .description {
@@ -103,18 +105,18 @@ $smallSpacing: 0.5em;
 //   & > .leftColumn {
 //     grid-area: left;
 
-//     .outreachSection {
+//     .speakingSection {
 //       display: grid;
 //       grid-auto-rows: min-content;
 //       grid-gap: 0.5em;
-  
-//       .outreachItem {
+
+//       .speakingItem {
 //         display: grid;
 //         grid-template-columns: 180px 1fr;
 //         grid-template-areas: "title description";
 //         grid-gap: 1em;
 //       }
-//     }  
+//     }
 //   }
 
 //   & > .rightColumn {
@@ -126,7 +128,7 @@ $smallSpacing: 0.5em;
 //       display: grid;
 //       grid-auto-rows: min-content;
 //       grid-gap: 0.5em;
-  
+
 //       .educationItem {
 //         display: grid;
 //         grid-template-columns: 170px 1fr;
@@ -152,31 +154,33 @@ $smallSpacing: 0.5em;
     flex-grow: 9999;
     margin: 0 1em 1em 0;
 
-    .outreachSection {
+    .speakingSection {
       display: grid;
       grid-auto-rows: min-content;
       grid-gap: $smallSpacing;
-  
-      .outreachItem {
-        display: grid;
-        grid-template-columns: 180px 1fr;
-        grid-template-areas: "title description";
-        grid-gap: $primarySpacing;
+
+      .speakingItem {
+        display: flex;
+        flex-direction: column;
+        // display: grid;
+        // grid-template-columns: 180px 1fr;
+        // grid-template-areas: "title description";
+        // grid-gap: $primarySpacing;
       }
-    }  
+    }
   }
 
   & > .rightColumn {
-    flex-basis:100px;
-    flex-grow:1;
-    min-width: 300px;
+    flex-basis: 100px;
+    flex-grow: 1;
+    min-width: 350px;
 
     .educationSection {
       display: grid;
       grid-auto-rows: min-content;
       grid-gap: $smallSpacing;
       margin-bottom: $primarySpacing;
-  
+
       .educationItem {
         display: grid;
         grid-template-columns: 170px 1fr;
@@ -193,13 +197,15 @@ $smallSpacing: 0.5em;
   }
 }
 
-.experienceSection, .projectsSection {
+.experienceSection,
+.projectsSection {
   display: grid;
   grid-auto-rows: auto;
   grid-gap: $smallSpacing;
 }
 
-.experienceItem, .projectItem {
+.experienceItem,
+.projectItem {
   display: grid;
   grid-template-columns: minmax(auto, 135px) 1fr;
   grid-template-areas: "title description";
@@ -210,14 +216,23 @@ $smallSpacing: 0.5em;
   display: flex;
   flex-direction: column;
 
-  .companyName, .schoolName, .projectName, .outreachName {
+  .companyName,
+  .schoolName,
+  .projectName,
+  .speakingName {
     @extend %headerPrimary;
   }
 
   .dateRange {
     @extend %bodyPrimary;
-    text-transform: uppercase;
     font-size: 0.85em;
+  }
+
+  a {
+    @extend %bodyPrimary;
+    font-size: 0.85em;
+    text-transform: lowercase;
+    text-decoration: none;
   }
 }
 
@@ -232,7 +247,9 @@ $smallSpacing: 0.5em;
     list-style-type: square;
   }
 
-  .jobTitle, .degreeTitle, .outreachTitle {
+  .jobTitle,
+  .degreeTitle,
+  .speakingTitle {
     @extend %headerPrimary;
   }
 
@@ -240,7 +257,10 @@ $smallSpacing: 0.5em;
     margin-top: 10px;
   }
 
-  .jobDescription, .projectDescription, .degreeDescription, .outreachDescription  {
+  .jobDescription,
+  .projectDescription,
+  .degreeDescription,
+  .speakingDescription {
     @extend %bodyPrimary;
   }
 }
@@ -269,7 +289,10 @@ $smallSpacing: 0.5em;
   }
 
   .leftColumn {
-    .companyName, .schoolName, .projectName, .outreachName {
+    .companyName,
+    .schoolName,
+    .projectName,
+    .speakingName {
       font-size: 14px;
     }
 
@@ -279,11 +302,16 @@ $smallSpacing: 0.5em;
   }
 
   .rightColumn {
-    .jobTitle, .degreeTitle, .outreachTitle {
+    .jobTitle,
+    .degreeTitle,
+    .speakingTitle {
       font-size: 14px;
     }
 
-    .jobDescription, .projectDescription, .degreeDescription, .outreachDescription {
+    .jobDescription,
+    .projectDescription,
+    .degreeDescription,
+    .speakingDescription {
       font-size: 12px;
     }
   }
