--- a/style.css
+++ b/style.css
@@ -10,7 +10,12 @@ body {
 /*
   Common component styles
 */
-.rightColumn .jobTitle, .rightColumn .degreeTitle, .rightColumn .outreachTitle, .leftColumn .companyName, .leftColumn .schoolName, .leftColumn .projectName, .leftColumn .outreachName, .header .contactName, .sectionHeader {
+.rightColumn .jobTitle,
+.rightColumn .degreeTitle,
+.rightColumn .speakingTitle, .leftColumn .companyName,
+.leftColumn .schoolName,
+.leftColumn .projectName,
+.leftColumn .speakingName, .header .contactName, .sectionHeader {
   font-weight: 600;
   font-family: "Yantramanav", sans-serif;
   font-size: 1em;
@@ -18,7 +23,10 @@ body {
   text-transform: capitalize;
 }
 
-.rightColumn .jobDescription, .rightColumn .projectDescription, .rightColumn .degreeDescription, .rightColumn .outreachDescription, .leftColumn .dateRange, .header .contactDetails a, .description {
+.rightColumn .jobDescription,
+.rightColumn .projectDescription,
+.rightColumn .degreeDescription,
+.rightColumn .speakingDescription, .leftColumn a, .leftColumn .dateRange, .header .contactDetails a, .description {
   font-weight: 500;
   font-family: "Khula", sans-serif;
   font-size: 0.95em;
@@ -31,6 +39,8 @@ body {
   text-transform: uppercase;
   color: #018484;
   margin-bottom: -5px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .accent {
@@ -84,21 +94,19 @@ body {
   flex-grow: 9999;
   margin: 0 1em 1em 0;
 }
-.twoColumnSection > .leftColumn .outreachSection {
+.twoColumnSection > .leftColumn .speakingSection {
   display: grid;
   grid-auto-rows: min-content;
   grid-gap: 0.5em;
 }
-.twoColumnSection > .leftColumn .outreachSection .outreachItem {
-  display: grid;
-  grid-template-columns: 180px 1fr;
-  grid-template-areas: "title description";
-  grid-gap: 1em;
+.twoColumnSection > .leftColumn .speakingSection .speakingItem {
+  display: flex;
+  flex-direction: column;
 }
 .twoColumnSection > .rightColumn {
   flex-basis: 100px;
   flex-grow: 1;
-  min-width: 300px;
+  min-width: 350px;
 }
 .twoColumnSection > .rightColumn .educationSection {
   display: grid;
@@ -118,13 +126,15 @@ body {
   grid-gap: 0.5em;
 }
 
-.experienceSection, .projectsSection {
+.experienceSection,
+.projectsSection {
   display: grid;
   grid-auto-rows: auto;
   grid-gap: 0.5em;
 }
 
-.experienceItem, .projectItem {
+.experienceItem,
+.projectItem {
   display: grid;
   grid-template-columns: minmax(auto, 135px) 1fr;
   grid-template-areas: "title description";
@@ -136,8 +146,12 @@ body {
   flex-direction: column;
 }
 .leftColumn .dateRange {
-  text-transform: uppercase;
   font-size: 0.85em;
+}
+.leftColumn a {
+  font-size: 0.85em;
+  text-transform: lowercase;
+  text-decoration: none;
 }
 
 .rightColumn {
@@ -169,17 +183,25 @@ body {
     grid-template-columns: minmax(auto, 180px) 1fr;
   }
 
-  .leftColumn .companyName, .leftColumn .schoolName, .leftColumn .projectName, .leftColumn .outreachName {
+  .leftColumn .companyName,
+.leftColumn .schoolName,
+.leftColumn .projectName,
+.leftColumn .speakingName {
     font-size: 14px;
   }
   .leftColumn .dateRange {
     font-size: 12px;
   }
 
-  .rightColumn .jobTitle, .rightColumn .degreeTitle, .rightColumn .outreachTitle {
+  .rightColumn .jobTitle,
+.rightColumn .degreeTitle,
+.rightColumn .speakingTitle {
     font-size: 14px;
   }
-  .rightColumn .jobDescription, .rightColumn .projectDescription, .rightColumn .degreeDescription, .rightColumn .outreachDescription {
+  .rightColumn .jobDescription,
+.rightColumn .projectDescription,
+.rightColumn .degreeDescription,
+.rightColumn .speakingDescription {
     font-size: 12px;
   }
 }
