--- a/style.css
+++ b/style.css
@@ -10,12 +10,7 @@ body {
 /*
   Common component styles
 */
-.rightColumn .jobTitle,
-.rightColumn .degreeTitle,
-.rightColumn .speakingTitle, .leftColumn .companyName,
-.leftColumn .schoolName,
-.leftColumn .projectName,
-.leftColumn .speakingName, .header .contactName, .sectionHeader {
+.rightColumn .jobTitle, .rightColumn .degreeTitle, .rightColumn .outreachTitle, .leftColumn .companyName, .leftColumn .schoolName, .leftColumn .projectName, .leftColumn .outreachName, .header .contactName, .sectionHeader {
   font-weight: 600;
   font-family: "Yantramanav", sans-serif;
   font-size: 1em;
@@ -23,10 +18,7 @@ body {
   text-transform: capitalize;
 }
 
-.rightColumn .jobDescription,
-.rightColumn .projectDescription,
-.rightColumn .degreeDescription,
-.rightColumn .speakingDescription, .leftColumn a, .leftColumn .dateRange, .header .contactDetails a, .description {
+.rightColumn .jobDescription, .rightColumn .projectDescription, .rightColumn .degreeDescription, .rightColumn .outreachDescription, .leftColumn .dateRange, .header .contactDetails a, .description {
   font-weight: 500;
   font-family: "Khula", sans-serif;
   font-size: 0.95em;
@@ -37,10 +29,8 @@ body {
   border-bottom: 1px solid;
   font-size: 1em;
   text-transform: uppercase;
-  color: #018484;
+  color: #008080;
   margin-bottom: -5px;
-  display: flex;
-  justify-content: space-between;
 }
 
 .accent {
@@ -58,7 +48,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #018484;
+  background-color: #008080;
 }
 .header .contactName {
   font-size: 3em;
@@ -94,19 +84,21 @@ body {
   flex-grow: 9999;
   margin: 0 1em 1em 0;
 }
-.twoColumnSection > .leftColumn .speakingSection {
+.twoColumnSection > .leftColumn .outreachSection {
   display: grid;
   grid-auto-rows: min-content;
   grid-gap: 0.5em;
 }
-.twoColumnSection > .leftColumn .speakingSection .speakingItem {
-  display: flex;
-  flex-direction: column;
+.twoColumnSection > .leftColumn .outreachSection .outreachItem {
+  display: grid;
+  grid-template-columns: 135px 1fr;
+  grid-template-areas: "title description";
+  grid-gap: 1em;
 }
 .twoColumnSection > .rightColumn {
   flex-basis: 100px;
   flex-grow: 1;
-  min-width: 350px;
+  min-width: 300px;
 }
 .twoColumnSection > .rightColumn .educationSection {
   display: grid;
@@ -126,15 +118,13 @@ body {
   grid-gap: 0.5em;
 }
 
-.experienceSection,
-.projectsSection {
+.experienceSection, .projectsSection {
   display: grid;
   grid-auto-rows: auto;
   grid-gap: 0.5em;
 }
 
-.experienceItem,
-.projectItem {
+.experienceItem, .projectItem {
   display: grid;
   grid-template-columns: minmax(auto, 135px) 1fr;
   grid-template-areas: "title description";
@@ -146,12 +136,8 @@ body {
   flex-direction: column;
 }
 .leftColumn .dateRange {
+  text-transform: uppercase;
   font-size: 0.85em;
-}
-.leftColumn a {
-  font-size: 0.85em;
-  text-transform: lowercase;
-  text-decoration: none;
 }
 
 .rightColumn {
@@ -183,25 +169,17 @@ body {
     grid-template-columns: minmax(auto, 180px) 1fr;
   }
 
-  .leftColumn .companyName,
-.leftColumn .schoolName,
-.leftColumn .projectName,
-.leftColumn .speakingName {
+  .leftColumn .companyName, .leftColumn .schoolName, .leftColumn .projectName, .leftColumn .outreachName {
     font-size: 14px;
   }
   .leftColumn .dateRange {
     font-size: 12px;
   }
 
-  .rightColumn .jobTitle,
-.rightColumn .degreeTitle,
-.rightColumn .speakingTitle {
+  .rightColumn .jobTitle, .rightColumn .degreeTitle, .rightColumn .outreachTitle {
     font-size: 14px;
   }
-  .rightColumn .jobDescription,
-.rightColumn .projectDescription,
-.rightColumn .degreeDescription,
-.rightColumn .speakingDescription {
+  .rightColumn .jobDescription, .rightColumn .projectDescription, .rightColumn .degreeDescription, .rightColumn .outreachDescription {
     font-size: 12px;
   }
 }
